# soft_exterior_hand

./: CMakeLists.txt  package.xml
config/: hand.rviz  joint_names_soft_exterior_hand.yaml
euslisp/: balloon.l  grasp-arm.l  grasp-arm.l~  grasp-object.l  grasp-object.l~  grasp-paper.l  grasp.l  grasp.l~  hold-hand.l  hold-hand.l~  shakehand.l  stand-up.l
firmware/sample/BMX055_000/: BMX055_000.ino
firmware/sample/BMX055_111/: BMX055_111.ino
firmware/sample/BMX055_multi/: BMX055_multi.ino
firmware/sample/bluetooth_ros/: bluetooth_ros.ino
firmware/sample/hand_ros/: hand_ros.ino
firmware/sample/read_sensors/: read_sensors.ino
firmware/sample/servo_control/: servo_control.ino
firmware/src/: BluetoothHardware.h
launch/: display.launch  gazebo.launch  hand.launch  sample.launch  test.launch
meshes/: base_link.STL  index_link_0.STL  index_link_1.STL  index_link_2.STL  index_link_3.STL  little_link_0.STL  little_link_1.STL  little_link_2.STL  little_link_3.STL  middle_link_0.STL  middle_link_1.STL  middle_link_2.STL  middle_link_3.STL  ring_link_0.STL  ring_link_1.STL  ring_link_2.STL  ring_link_3.STL  thumb_link_0.STL  thumb_link_1.STL  thumb_link_2.STL  thumb_link_3.STL
node_scripts/: interpolate_node.py  marker_publisher.py  sample_flex_sensor.py  save_csv.py  servo_states_to_joint_states.py
scripts/: rfcomm.sh  rfcomm.sh~
urdf/: soft_exterior_hand.csv  soft_exterior_hand.urdf
